Further refactoring. Squish bug in global nav.

--- a/app/sass/components/_navigation-global.scss
+++ b/app/sass/components/_navigation-global.scss
@@ -1,16 +1,28 @@
+// ## Global Navigation
+// The global navigation at the top of the page.
+// Collapsed by default on smaller screens.
+
+
 #topNav,
 .global-nav {
 	
+	flex:4;
+
 	// Mobile first defaults
 	padding:0;
 	list-style:none;
-	margin:8px 0 0 0;
-	@include toggle-menu();
+	margin:$base-font-size/2 0 0 0;
+	@include toggle-menu();		
+	
+	> li {
+		display: inline-block;
+		width: 46%;
+		margin:1% 1% 0 0; 
+	}
 
 	a {
 		display: block;
 		text-align: center;
-		font-size: $base-font-size/1.3; 
 		padding:$base-font-size/2;
 		border:4px solid $primary-sand;
 		background-color: $ucsc-blue;
@@ -26,7 +38,9 @@
 		justify-content:flex-end;
 
 		> li {
-			display:flex;
+			display: block;
+			width: auto !important;
+			margin:0;
 			background-image: none;
 			border-left: 1px solid #C2CDC9;
 			line-height: 1.2em;
@@ -34,7 +48,7 @@
 		}
 
 		a {
-			padding: 4em 1.4em 0em;
+			padding: 3em 1.4em 0em;
 			border:none;
 			background-color: transparent;
 			color: $primary-blue;
